--- a/getPeople/Base.lproj/Main.storyboard
+++ b/getPeople/Base.lproj/Main.storyboard
@@ -71,6 +71,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="fMu-0d-xsy" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TZ3-LH-Amh">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
